@@ -9,6 +9,8 @@
 	avatarsay.c (open_document): removed
 	avtwindows.c (open_document): removed
 
+	* avatarsay.c (avatar_command): new command "pager"
+
 2009-07-19  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avatarsay.c (avatar_command, handle_image_command)
